# papercast

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  STATUS.md  boox-tab-x-c.toml  papercast.toml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/papercast/: FrameRenderer.kt  MainActivity.kt  RecvCore.kt  RefreshBackend.kt
android/app/src/main/res/values/: strings.xml
crates/papercast/: Cargo.toml
crates/papercast-capture/: Cargo.toml
crates/papercast-capture/src/: lib.rs  probe.rs  source.rs  test_pattern.rs  wayland.rs
crates/papercast-core/: Cargo.toml
crates/papercast-core/src/: dither.rs  eink.rs  frame.rs  lib.rs  overlay.rs  pixel.rs  scale.rs  sharpen.rs  tiles.rs
crates/papercast-proto/: Cargo.toml
crates/papercast-proto/src/: lib.rs
crates/papercast-recv-core/: Cargo.toml
crates/papercast-recv-core/src/: android.rs  lib.rs
crates/papercast-recv-core/tests/: reconnect.rs
crates/papercast/examples/: subrect_stress.rs
crates/papercast/src/: config.rs  control.rs  main.rs  mode.rs  pipeline_thread.rs  transport.rs
crates/papercast/src/commands/: ctl.rs  mod.rs  probe.rs  run.rs
crates/papercast/src/transports/: mod.rs  papercast.rs  vnc.rs
docs/: ROADMAP.md
scripts/: build-recv-core.sh
tools/: rfb_mode_check.py
