[workspace]
resolver = "2"
members = [
    "crates/papercast-core",
    "crates/papercast-capture",
    "crates/papercast-proto",
    "crates/papercast-recv-core",
    "crates/papercast",
    "vendor/rustvncserver",
]

# Shared settings inherited by member crates via `key.workspace = true`,
# so version/edition bumps happen in one place.
[workspace.package]
version = "0.1.0"
edition = "2021"
# PaperCast's own crates are MIT. The vendored rustvncserver keeps its own
# Apache-2.0 license (set explicitly in vendor/rustvncserver/Cargo.toml, not
# inherited from here); see vendor/rustvncserver/VENDORED.md.
license = "MIT"
repository = "https://github.com/chaselambert/papercast"

[workspace.dependencies]
papercast-core = { path = "crates/papercast-core" }
papercast-capture = { path = "crates/papercast-capture" }
papercast-proto = { path = "crates/papercast-proto" }
papercast-recv-core = { path = "crates/papercast-recv-core" }
# Vendored with three local patches; see vendor/rustvncserver/VENDORED.md.
rustvncserver = { path = "vendor/rustvncserver" }
anyhow = "1"
thiserror = "2"
tracing = "0.1"

# The e-ink pipeline is hot-path code; keep debug builds usable by
# optimizing dependencies even in dev profile.
[profile.dev.package."*"]
opt-level = 2
