[package]
name = "papercast-capture"
description = "Screen capture backends (Wayland) and compositor capability probing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
papercast-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
wayland-client = "0.31"
tokio = { version = "1", features = ["rt", "sync", "time"] }
