[package]
name = "papercast-core"
description = "E-ink image processing pipeline: grayscale, LUT, sharpen, dither, dirty tiles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fast_image_resize = "6.0.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror.workspace = true
