[package]
name = "papercast-recv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# `lib` supports host-side integration tests; `cdylib` lets cargo-ndk emit the
# `.so` loaded by the Kotlin shell. JNI symbols are gated by `android`.
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
papercast-proto.workspace = true
tracing.workspace = true
# JNI bindings live behind this feature so `cargo test --workspace` on the host
# never pulls an Android dependency. The `jni` crate itself is pure Rust and
# compiles on the host (`--features android`); only *linking* into an Android VM
# needs the NDK.
jni = { version = "0.21", optional = true }

[features]
android = ["dep:jni"]
