[package]
name = "papercast"
description = "Mirror a Linux desktop to an e-ink tablet: capture, e-ink processing, VNC serving"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
papercast-core.workspace = true
papercast-capture.workspace = true
papercast-proto.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustvncserver.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
rustix = { version = "1.1.4", features = ["process"] }

[dev-dependencies]
# Drives the M11a receiver core against the real `serve_proto` sender path in the
# transport integration test.
papercast-recv-core.workspace = true
